test/errors/return1.ida

#OUTPUT
#Syntax Error: Invalid token in expression.
# -> [14] return =
#
#END

#RET 1

extern func printf(s:str, ...)

func main -> int
begin
    return =
end

